# esp32-hal-cc-error

./: Cargo.toml  README.md  build.rs
link/: test.c
src/: main.rs
