[package]
name = "clink_test"
version = "0.1.0"
authors = ["isaac-asdf <97187398+isaac-asdf@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
cc = "1.0.79"

[dependencies]
hal = { package = "esp32-hal", version = "0.11.0" }
esp-backtrace = { version = "0.6.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.4.0", features = ["esp32"] }
esp-alloc = { version = "0.2.0", features = ["oom-handler"] }
